--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 
 
+:root {
+  --line-color: #3975EA;
+}
 
 @layer base {
 
@@ -35,7 +38,7 @@
   /* Adjust the width of the timeline */
   /* border-left: 4px dotted rgb(57, 117, 234); Change to dotted line */
   /* border-color: #3975EA; */
-  background: #3975EA;
+  background: var(--line-color);
   margin-top: 20px;
 
 }
@@ -47,6 +50,12 @@
   background: #3975EA;
 
 }
+vertical-timeline vertical-timeline--one-column-left::before {
+  left: 18px;
+  right: unset;
+  background: #3975EA;
+
+}
 
 .vertical-timeline-element-icon {
   position: absolute;
@@ -54,17 +63,19 @@
   left: 0;
   width: 40px;
   height: 40px;
-}
-
-.vertical-timeline-element-icon.is-hidden {
-  /* visibility: hidden; */
   border-radius: 50%;
   /* Sets border radius to 1px */
   border: 2px solid #3975EA;
   /* 1px solid black border */
   box-shadow: none;
+}
+
+.vertical-timeline-element-icon.is-hidden {
+  box-shadow: none;
 
 }
+
+            
 
 .vertical-timeline.vertical-timeline--one-column-left {
   padding: 0;
