--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,6 +81,32 @@
 
 }
 
+.pricegrid {
+  background-color: transparent;
+  overflow: hidden;
+  border-width: 2px;
+  border-style: solid;
+  border-color: #3975EA;
+  border-radius: 50px;
+  margin-right: 60px;
+  margin-right: 60px;
+
+}
+
+@media (min-width: 768px) {
+  .pricegrid {
+    margin-left: 0px;
+    margin-right: 0px;
+    background-color: transparent;
+    overflow: hidden;
+    border-width: 2px;
+    border-style: solid;
+    border-color: #3975EA;
+
+    border-radius: 50px;
+
+  }
+}
 
 
 .vertical-timeline.vertical-timeline--one-column-left {
@@ -131,7 +157,8 @@
   height: 50px;
   width: 130px;
 }
-.middle2{
+
+.middle2 {
   display: flex;
   flex-direction: row;
   justify-content: left;
@@ -141,12 +168,14 @@
 
 
 }
-.middle2con{
+
+.middle2con {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: left;
 }
+
 .textimg2 {
   font-size: 25px;
   color: #000;
@@ -156,12 +185,14 @@
   margin-bottom: 20px;
 
 }
-.img2{
+
+.img2 {
   height: 50px;
   width: 50px;
 
 }
-.icons{
+
+.icons {
   padding-bottom: 5%;
 }
 
@@ -170,10 +201,12 @@
     font-size: 20px;
     /* Smaller font size for mobile */
   }
-  .img2{
+
+  .img2 {
     height: 30px;
     width: 30px;
   }
+
   .textimg2 {
     font-size: 15px;
     /* Smaller font size for mobile */
