Dunno why but commit at this point

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,9 @@
 
 .containbg {
   background: url('/bg.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .missionbg {
