--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,7 +35,7 @@
 }
 @media screen and (max-width: 768px) {
   .missionbg {
-    background: #ffffff;
+    background: url('/bg.png');
     height: 100%;
     width:100%;
   }
