--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,6 +39,13 @@
     height: 100%;
     width:100%;
   }
+  .formbg{
+
+    background-color: #ffffff;
+    
+   
+  
+  }
   
 }
 
@@ -59,15 +66,12 @@
 
 
 .formbg{
-  background: url('../../public/img/contact/bg.png');
-  background-size: cover;
+  background: url('../../public/img/contact/bgform.png');
+  background-size: stretch;
+  background-color: #ffffff;
   background-repeat: no-repeat;
   background-position: center;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+ 
 
 }
 
